--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+2
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.3+4
+  flutter_webview_plugin: ^0.3.5
 
 dev_dependencies:
   flutter_test:
