--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.3+4
   flutter_webview_plugin: ^0.3.5
+  flutter_staggered_grid_view: ^0.3.0
 
 dev_dependencies:
   flutter_test:
